--- a/.gitignore
+++ b/.gitignore
@@ -132,3 +132,4 @@ iOSInjectionProject/
 **/xcshareddata/WorkspaceSettings.xcsettings
 
 # End of https://www.toptal.com/developers/gitignore/api/xcode,swift,macos
+worgleworgle_ios/worgleworgle_ios.xcodeproj/project.xcworkspace/xcuserdata/shingayeong.xcuserdatad/UserInterfaceState.xcuserstate
